--- a/style.css
+++ b/style.css
@@ -4,24 +4,24 @@
     padding: 0;
 }
 body{
-    background: wheat;
+    background: rgb(4, 9, 39);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .wrapped{
+    height: 100vh;
+    width: 100%;
     display: flex;
     justify-content: center;
-   
+    align-items: center;
+    flex-direction: column;
 }
 .container{
-    margin-top: 150px;
-    height: 600px;
-    width: 400px;
-    background: rgb(34, 74, 148);
-    border: 2px solid whitesmoke;
+    height: 400px;
+    width: 400px;  
     border-radius: 10px;
-    -webkit-box-shadow: -1px 0px 16px 3px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px 0px 16px 3px rgba(255, 255, 255, 0.75);
     -moz-box-shadow: -1px 0px 16px 3px rgba(0,0,0,0.75);
-    box-shadow: -1px 0px 16px 3px rgba(0,0,0,0.75);
+    box-shadow: 1px 0px 6px 1px rgba(255, 255, 255, 0.75);
 }
 h1{
     text-align: center;
@@ -31,13 +31,50 @@ h1{
     color: transparent;
     margin-top: 10px;
 }
-
-
-
-
-
-
-
+.search{
+    margin-bottom: 20px;
+    width: 390px;
+    border-radius: 25px;
+    background-color: rgba(148, 34, 91, 0.7);
+}
+.search input{
+    padding: 10px;
+    width: 90%;
+    margin: 0px;
+    border-radius: 25px 0px 0px 25px;
+    border: none;
+    padding-left: 20px;
+}
+input:focus{
+    outline: none;
+}
+.search i{
+    color: white;
+    margin-left: 5px;
+}
+.fa.fa-cloud.icon{
+   font-size: 100px;
+   text-align: center;
+   display: block;
+   color: rgb(35, 195, 243);
+   margin-top: 10px;
+}
+.temp_details{
+    display: flex;
+    justify-content: space-around;
+    color: yellow;
+}
+h2{
+    text-align: center;
+    font-size: 40px;
+    color: white;
+}
+#main{
+    text-align: center;
+    display: block;
+    color: white;
+    padding-bottom: 50px;
+}
 
 
 
