--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     flex-direction: column;
 }
 .container{
+    background: rgb(13, 139, 189);
     height: 400px;
     width: 400px;  
     border-radius: 10px;
@@ -35,7 +36,7 @@ h1{
     margin-bottom: 20px;
     width: 390px;
     border-radius: 25px;
-    background-color: rgba(148, 34, 91, 0.7);
+    background-color: rgba(244, 248, 0, 0.7);
 }
 .search input{
     padding: 10px;
@@ -75,7 +76,14 @@ h2{
     color: white;
     padding-bottom: 50px;
 }
-
+#icon{
+    height: 100px;
+    display: block;
+    margin: 0 auto;
+    background-color: transparent;
+    border-radius: 10px;
+    margin-top: 10px;
+}
 
 
 
